experimenting further with bg pages

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     // "https://beardy-website.herokuapp.com/",
     "declarativeContent",
     "webNavigation",
+    "storage",
     "http://*/*",
     "https://*/*"
    ],
