--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-  "name": "Beard Extension",
+  "name": "La Barbe !",
+  "short_name": "la barbe extension",
   "version": "0.0.1",
-  "description": "La barbe !",
+  "author": "Claire Zuliani",
+  "description": "Extension highlighting male-dominated assemblies spotted by La Barbe, a French direct action feminist group",
+  "homepage_url": "https://beardy-website.herokuapp.com",
   "icons": {
     "19": "icons/icon-19.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
     },
   "permissions": [
-    // "tabs",
     "http://*/*",
     "https://*/*"
    ],
@@ -22,8 +24,6 @@
        "js": ["content.js"]
      }
   ],
-  // "optional_permissions": ["*://*/*"],
   "web_accessible_resources": [ "img/*.png" ],
   "manifest_version": 2
-
 }
